fixed alignment and add images

--- a/styles/GaphicsDesign/GraphicsDesign.module.css
+++ b/styles/GaphicsDesign/GraphicsDesign.module.css
@@ -2,94 +2,112 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px;
-    background-color: #1C1C1C;
+    background: #1C1C1C;
     color: white;
   }
   
   .header {
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+    
   }
   
   .title {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: #FFFFFF;
-  }
+  color: #FFFFFF;
+  font-size: 32px;
+   font-weight: 500;
+   line-height: 38.73px;
+   letter-spacing: -0.02em;
+   text-align: center;
+   background: linear-gradient(285deg, #C0B3FF 46.52%, #6949FF 54.91%);
+   -webkit-background-clip: text;
+   color: transparent;
+   }
   
   .subtitle {
-    font-size: 1.2rem;
-    color: #999999;
+  margin-top: 10px;
+  margin-bottom: 20px;
+ color: #C9C9C9;
+ font-size: 13px;
+font-weight: 300;
+line-height: 15.73px;
+letter-spacing: -0.02em;
+text-align: center;
+
   }
   
-  .section {
-    width: 100%;
-    max-width: 1200px;
-    margin: 20px 0;
-  }
-  
+ 
   .headingRow {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    margin: 20px 0;
+    
   }
   
   .sectionHeading {
-    font-size: 1.5rem;
-    margin: 20px 0;
+   
+    margin: 10px 0;
     color: #FFFFFF;
+   
+font-size: 13px;
+font-weight: 500;
+line-height: 15.73px;
+letter-spacing: -0.02em;
+text-align: left;
+
   }
   
   .flexContainer {
-    
     display: flex;
-    flex-wrap: wrap;
+    
     gap: 10px;
-    justify-content: flex-start;
+   
     margin-bottom: 10px;
   }
   .card {
-    background-color: rgba(33, 36, 36, 0.599);
-    flex: 1;
+
+    background: #171717;
     display: flex;
-    align-items: center;    /* Horizontally center */
-    justify-content: start; /* Vertically center */
+    align-items: center;    
+    justify-content: start; 
     gap: 10px;
     padding: 10px 10px;
+   
     border-radius: 10px;
     text-align: center;
-   
-   
-  }
-  
-  .box {
-    width: 50px;  /* Width of the box */
-    height: 50px; /* Height of the box */
-    /* background-color: #725fa0; Box color */
-    background: linear-gradient(0deg, #6949FF, #6949FF),
-conic-gradient(from 180deg at 50% 42.92%, #171C5E 0deg, #4429AF 248.4deg, #855DFC 360deg);
 
-    margin-bottom: 10px; /* Space between the box and h1 */
-    border-radius: 10px;
+    width: 190px;
+height: 56px;
+
+gap: 6.41px;
+
+border: 0px 0px 0px 4px;
+opacity: 0px;
+
+   
   }
+
   .heading {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1rem;
-    color: white;
-    white-space: nowrap; /* Prevents the text from wrapping */
-  }
+    color: #DADADA;
+    /* white-space: nowrap;  */
+    font-size: 11px;
+    font-weight: 500;
+    line-height: 13.31px;
+    letter-spacing: -0.02em;
+    text-align: left;
+    }
   
   .box2 {
-    width: 50px;  /* Width of the box */
-    height: 50px; /* Height of the box */
-    /* background-color: #725fa0; Box color */
-    background: linear-gradient(0deg, #90445e, #6949FF),
-conic-gradient(from 180deg at 50% 42.92%, #5e1751 0deg, #e234b7 248.4deg, #d3079a 360deg);
+    width: 40px;  
+    height: 40px; 
+   
+    /* background: linear-gradient(0deg, #90445e, #6949FF),
+  conic-gradient(from 180deg at 50% 42.92%, #5e1751 0deg, #e234b7 248.4deg, #d3079a 360deg); */
+  
 
-    margin-bottom: 10px; /* Space between the box and h1 */
-    border-radius: 10px;
+    margin-bottom: 10px; 
+    border-radius: 8px;
   }
